Tests/RunCMake/CommandLine/E_rm_non_recursive_directory-two-directories-stderr.txt
^Error removing directory ".*/rm_tests/d1" without recursive option\.
Error removing directory ".*/rm_tests/d2" without recursive option\.$
